[project]
name = "fast_unit"

[tool.poetry]
name = "fast_unit"
version = "0.1.0"
description = ""
authors = ["ethan <ethan.chapman0@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
